--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@
 /projetos/aula-01/OlaMundo/SituacaoDoAluno/build/
 /projetos/aula-01/SituacaoAluno/nbproject/private/
 /projetos/aula-01/SituacaoAluno/build/
+/projetos/aula-02/TiposPrimitivos/nbproject/private/
+/projetos/aula-02/TiposPrimitivos/build/
+/projetos/aula-02/MeuNome/nbproject/private/
+/projetos/aula-02/MeuNome/build/
+/projetos/aula-02/Tabulacao/nbproject/private/
+/projetos/aula-02/Tabulacao/build/
+/projetos/aula-02/ContadorLinhas/nbproject/private/
+/projetos/aula-02/ContadorLinhas/build/
+/projetos/aula-02/AnoBissexto/nbproject/private/
+/projetos/aula-02/AnoBissexto/build/
