--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,15 @@
 /projetos/aula-02/ContadorLinhas/build/
 /projetos/aula-02/AnoBissexto/nbproject/private/
 /projetos/aula-02/AnoBissexto/build/
+/projetos/aula-03/AreaRetangulo/nbproject/private/
+/projetos/aula-03/AreaRetangulo/build/
+/projetos/aula-03/JavaApplication10/nbproject/private/
+/projetos/aula-03/JavaApplication10/build/
+/projetos/aula-03/Leituras/nbproject/private/
+/projetos/aula-03/Leituras/build/
+/projetos/aula-03/FrasesOrdenadas/nbproject/private/
+/projetos/aula-03/FrasesOrdenadas/build/
+/projetos/aula-03/MediaAritimetica/nbproject/private/
+/projetos/aula-03/MediaAritimetica/build/
+/projetos/aula-03/Fibonnaci/nbproject/private/
+/projetos/aula-03/Fibonnaci/build/
