--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,23 @@
 /projetos/aula-03/MediaAritimetica/build/
 /projetos/aula-03/Fibonnaci/nbproject/private/
 /projetos/aula-03/Fibonnaci/build/
+/projetos/aula-04/MultiploDeDois/nbproject/private/
+/projetos/aula-04/MultiploDeDois/build/
+/projetos/aula-04/Triangulo/nbproject/private/
+/projetos/aula-04/Triangulo/build/
+/projetos/aula-04/ParImpar/nbproject/private/
+/projetos/aula-04/ParImpar/build/
+/projetos/aula-04/PessoaMaisVelha/nbproject/private/
+/projetos/aula-04/PessoaMaisVelha/build/
+/projetos/aula-04/MaiorOuIgual/nbproject/private/
+/projetos/aula-04/MaiorOuIgual/build/
+/projetos/aula-04/NotasEstudante/nbproject/private/
+/projetos/aula-04/NotasEstudante/build/
+/projetos/aula-04/Paises/nbproject/private/
+/projetos/aula-04/Paises/build/
+/projetos/aula-04/MultiplicarOuSomar/nbproject/private/
+/projetos/aula-04/MultiplicarOuSomar/build/
+/projetos/aula-04/PositivoNegativo/nbproject/private/
+/projetos/aula-04/PositivoNegativo/build/
+/projetos/aula-04/Fatorial/nbproject/private/
+/projetos/aula-04/Fatorial/build/
