--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,19 @@
 /projetos/aula-04/PositivoNegativo/build/
 /projetos/aula-04/Fatorial/nbproject/private/
 /projetos/aula-04/Fatorial/build/
+/projetos/aula-05/QuadradoFor/nbproject/private/
+/projetos/aula-05/QuadradoFor/build/
+/projetos/aula-05/Teste/nbproject/private/
+/projetos/aula-05/Teste/build/
+/projetos/aula-05/ForQuadrado/nbproject/private/
+/projetos/aula-05/ForQuadrado/build/
+/projetos/aula-05/DezImpares/nbproject/private/
+/projetos/aula-05/DezImpares/build/
+/projetos/aula-05/Entre1e4/nbproject/private/
+/projetos/aula-05/Entre1e4/build/
+/projetos/aula-05/Temperaturas/nbproject/private/
+/projetos/aula-05/Temperaturas/build/
+/projetos/aula-05/IdadeEmDias/nbproject/private/
+/projetos/aula-05/IdadeEmDias/build/
+/projetos/aula-05/Grenais/nbproject/private/
+/projetos/aula-05/Grenais/build/
