--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,7 @@
 /projetos/aula-05/IdadeEmDias/build/
 /projetos/aula-05/Grenais/nbproject/private/
 /projetos/aula-05/Grenais/build/
+/projetos/aula-06/Matrizes/nbproject/private/
+/projetos/aula-06/Matrizes/build/
+/projetos/aula-06/CopiaMatriz/nbproject/private/
+/projetos/aula-06/CopiaMatriz/build/
