--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,7 @@
 /projetos/aula-06/Matrizes/build/
 /projetos/aula-06/CopiaMatriz/nbproject/private/
 /projetos/aula-06/CopiaMatriz/build/
+/projetos/aula-07/ManipulacaoDeStrings/nbproject/private/
+/projetos/aula-07/ManipulacaoDeStrings/build/
+/projetos/aula-07/ValorDeS/nbproject/private/
+/projetos/aula-07/ValorDeS/build/
