--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,11 @@
 /projetos/aula-07/ManipulacaoDeStrings/build/
 /projetos/aula-07/ValorDeS/nbproject/private/
 /projetos/aula-07/ValorDeS/build/
+/projetos/aula-08/MediaFuncao/nbproject/private/
+/projetos/aula-08/MediaFuncao/build/
+/projetos/aula-08/AoQuadradoFuncao/nbproject/private/
+/projetos/aula-08/AoQuadradoFuncao/build/
+/projetos/aula-08/FuncaoMediaSituacao/nbproject/private/
+/projetos/aula-08/FuncaoMediaSituacao/build/
+/projetos/aula-08/MatrizQuadrada/nbproject/private/
+/projetos/aula-08/MatrizQuadrada/build/
