--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,11 @@
 /projetos/aula-08/FuncaoMediaSituacao/build/
 /projetos/aula-08/MatrizQuadrada/nbproject/private/
 /projetos/aula-08/MatrizQuadrada/build/
+/projetos/aula-09/FatorialRecursivo/nbproject/private/
+/projetos/aula-09/FatorialRecursivo/build/
+/projetos/aula-09/FibonacciRecursivo/nbproject/private/
+/projetos/aula-09/FibonacciRecursivo/build/
+/projetos/aula-09/DobroRecursivo/nbproject/private/
+/projetos/aula-09/DobroRecursivo/build/
+/projetos/aula-09/LED/nbproject/private/
+/projetos/aula-09/LED/build/
