--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,7 @@
 /projetos/aula-09/DobroRecursivo/build/
 /projetos/aula-09/LED/nbproject/private/
 /projetos/aula-09/LED/build/
+/projetos/aula-10/Pedra-papel-tesoura-lagarto-spock/nbproject/private/
+/projetos/aula-10/Pedra-papel-tesoura-lagarto-spock/build/
+/projetos/aula-10/NumeroPerfeito/nbproject/private/
+/projetos/aula-10/NumeroPerfeito/build/
