--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,5 @@
 /projetos/aula-10/Pedra-papel-tesoura-lagarto-spock/build/
 /projetos/aula-10/NumeroPerfeito/nbproject/private/
 /projetos/aula-10/NumeroPerfeito/build/
+/projetos/aula-11/JogoLabirinto/nbproject/private/
+/projetos/aula-11/JogoLabirinto/build/
