--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,5 @@
 /projetos/aula-10/NumeroPerfeito/build/
 /projetos/aula-11/JogoLabirinto/nbproject/private/
 /projetos/aula-11/JogoLabirinto/build/
+/projetos/aula-12/JogoLabirinto/nbproject/private/
+/projetos/aula-12/JogoLabirinto/build/
