--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,7 @@
 /projetos/aula-11/JogoLabirinto/build/
 /projetos/aula-12/JogoLabirinto/nbproject/private/
 /projetos/aula-12/JogoLabirinto/build/
+/projetos/aula-13/Cinema/nbproject/private/
+/projetos/aula-13/Cinema/build/
+/projetos/aula-13/Enumeracao/nbproject/private/
+/projetos/aula-13/Enumeracao/build/
