--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,5 @@
 /projetos/aula-13/Cinema/build/
 /projetos/aula-13/Enumeracao/nbproject/private/
 /projetos/aula-13/Enumeracao/build/
+/projetos/aula-14/JogoDaVelha/nbproject/private/
+/projetos/aula-14/JogoDaVelha/build/
